--- a/Public/css/frontend.light.css
+++ b/Public/css/frontend.light.css
@@ -94,8 +94,12 @@ input:focus, textarea:focus, select:focus {
 .shadow-hover:hover {
     box-shadow: 0 4px 5px rgba(0, 0, 0, 0.05);
 }
-form .required, form .error {
+form .required {
+    color: #21a9ff;
+}
+form .error {
     color: #ef695e;
+    
 }
 
 td.small img {
