--- a/Sources/App/Modules/Admin/Templates/Fields/Textarea.html
+++ b/Sources/App/Modules/Admin/Templates/Fields/Textarea.html
@@ -1,6 +1,6 @@
 <section class="m:bottom">
-    <label for="#(field.id)">#(field.label ?? field.id.capitalized())#if(field.required ?? false): <span class="required">(required)</span>#endif#if(field.more ?? false): <span class="more">(#(field.more))</span>#endif</label>
-    <textarea name="#(field.id)" class="#(field.size)">#(field.data.value)</textarea>
+    <label for="#(field.id)">#(field.label ?? field.id.capitalized())#if(field.required ?? false):<span class="required">*</span>#endif#if(field.more ?? false): <span class="more">(#(field.more))</span>#endif</label>
+    <textarea name="#(field.id)" class="#(field.size)"#if(field.required ?? false): aria-required="true"#endif>#(field.data.value)</textarea>
     #if(field.data.error != nil):
     <span class="error">#(field.data.error)</span>
     #endif
