--- a/Sources/App/Modules/Frontend/Templates/Admin/Metadatas/Edit.html
+++ b/Sources/App/Modules/Frontend/Templates/Admin/Metadatas/Edit.html
@@ -19,7 +19,7 @@
     #(field = ["id": "excerpt", "size": "small", "data": fields.excerpt])
     #inline("Admin/Fields/Textarea")
     
-    #(field = ["id": "date", "more": "yyyy/mm/dd", "data": fields.date])
+    #(field = ["id": "date", "more": "yyyy/mm/dd hh:MM", "data": fields.date])
     #inline("Admin/Fields/Text")
 </fieldset>
 
