--- a/Sources/App/Modules/Blog/Templates/Admin/Authors/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Authors/Edit.html
@@ -1,12 +1,12 @@
 #define(toolbarLeft):
-    #if(fields.id != nil):
+    #if(fields.modelId != nil):
     <a href="/admin/frontend/metadatas/#(fields.metadata.id)">#svg("feather")</a>
     <a href="#if(!fields.metadata.slug.isEmpty()):/#(fields.metadata.slug)/#else:/#endif" target="_blank">#svg("eye")</a>
     #endif
 #enddefine
 #define(toolbarRightBefore):
-    #if(fields.id != nil):
-    <a href="/admin/blog/authors/#(fields.id)/links">#svg("link")</a>
+    #if(fields.modelId != nil):
+    <a href="/admin/blog/authors/#(fields.modelId)/links">#svg("link")</a>
     #endif
 #enddefine
 #define(fields):
@@ -27,7 +27,7 @@
     "list": "authors",
     "id": formId,
     "token": formToken,
-    "modelId": fields.id,
+    "modelId": fields.modelId,
     "key": "author",
     "multipart": true
 ])
