--- a/Sources/App/Modules/Blog/Templates/Admin/Links/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Links/Edit.html
@@ -21,7 +21,7 @@
     "list": "links",
     "id": formId,
     "token": formToken,
-    "modelId": fields.id,
+    "modelId": fields.modelId,
     "key": "link"
 ])
 #inline("Admin/Form")
