--- a/Sources/App/Modules/Blog/Templates/Admin/Posts/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Posts/Edit.html
@@ -31,7 +31,7 @@
     "list": "posts",
     "id": formId,
     "token": formToken,
-    "modelId": fields.id,
+    "modelId": fields.modelId,
     "key": "post",
     "multipart": true
 ])
