--- a/Sources/App/Modules/Menu/Templates/Admin/Items/Edit.html
+++ b/Sources/App/Modules/Menu/Templates/Admin/Items/Edit.html
@@ -23,7 +23,7 @@
     "list": "items",
     "id": formId,
     "token": formToken,
-    "modelId": fields.id,
+    "modelId": fields.modelId,
     "key": "item"
 ])
 #inline("Admin/Form")
