--- a/Sources/App/Modules/Redirect/Templates/Admin/Redirects/Edit.html
+++ b/Sources/App/Modules/Redirect/Templates/Admin/Redirects/Edit.html
@@ -15,7 +15,7 @@
     "list": "redirects",
     "id": formId,
     "token": formToken,
-    "modelId": fields.id,
+    "modelId": fields.modelId,
     "key": "redirect"
 ])
 #inline("Admin/Form")
