--- a/Sources/App/Modules/System/Templates/Admin/Variables/Edit.html
+++ b/Sources/App/Modules/System/Templates/Admin/Variables/Edit.html
@@ -16,7 +16,7 @@
     "list": "variables",
     "id": formId,
     "token": formToken,
-    "modelId": fields.id,
+    "modelId": fields.modelId,
     "key": "variable"
 ])
 #inline("Admin/Form")
