--- a/Sources/App/Modules/User/Templates/Admin/Users/Edit.html
+++ b/Sources/App/Modules/User/Templates/Admin/Users/Edit.html
@@ -13,7 +13,7 @@
     "list": "users",
     "id": formId,
     "token": formToken,
-    "modelId": fields.id,
+    "modelId": fields.modelId,
     "key": "user"
 ])
 #inline("Admin/Form")
