--- a/Sources/App/Modules/Frontend/Templates/Index.html
+++ b/Sources/App/Modules/Frontend/Templates/Index.html
@@ -18,6 +18,25 @@
     #endif
     
     <style type="text/css">
+        body {
+            #if(!$vars["site.font.family"].isEmpty):
+            font-family: #($vars["site.font.family"]);
+            #endif
+            #if(!$vars["site.font.size"].isEmpty):
+            font-size: #($vars["site.font.size"]);
+            #endif
+        }
+        #if(!$vars["site.color.primary"].isEmpty):
+        a:link, a:visited, \#nav li a.selected {
+            color: #($vars["site.color.primary"]);
+        }
+        #endif
+        #if(!$vars["site.color.secondary"].isEmpty):
+        a:link:hover, a:visited:hover, \#nav a:link.selected:hover, \#nav li a:link:hover, \#nav li a:visited:hover{
+            color: #($vars["site.color.secondary"]);
+        }
+        #endif
+
         #evaluate(css ?? "")
         #($vars["site.css"] ?? "")
         #(head.css ?? "")
@@ -46,7 +65,7 @@
         <label for="menu-button" id="menu-icon" class="selection:off"><span></span></label>
 
         <nav id="nav">
-            #for(item in $menus["main"].items):
+            #for(item in $menus["main"].items ?? []):
             <li>
                 <a href="#(item.url)" #if($req.url.path == item.url): class="selected"#endif#if(item.targetBlank): target="_blank"#endif>
                     #if(item.icon != nil):#svg(item.icon)#endif #(item.label)
@@ -62,20 +81,27 @@
     
     <footer>
         <section class="p:xl center">
+
             <img class="w64" src="/images/icons/icon.png" alt="Logo of #($vars["site.title"])" title="#($vars["site.title"])">
 
-            <p>This site is powered by <a href="https://github.com/binarybirds/feather" target="_blank">Feather</a> &copy; #Date(timeStamp: Timestamp(), localizedFormat: "y")</p>
-            
+            #($vars["site.footer"])
+                
+            <p>#($vars["site.copy"]) &copy; #Date(timeStamp: Timestamp(), localizedFormat: "y")</p>
+
             <p>
                 #if($user.isAuthenticated):
                 <a href="/admin/">Admin</a> &middot; <a href="/logout/">Logout</a>
                 #else:
                 <a href="/login/">Login</a>
                 #endif
-                &middot;
-                <a href="/sitemap.xml" target="_blank">Sitemap</a>
-                &middot;
-                <a href="/rss.xml" target="_blank">RSS</a>
+
+                
+                #for(item in $menus["footer"].items ?? []):
+                    &middot;
+                <a href="#(item.url)" #if($req.url.path == item.url): class="selected"#endif#if(item.targetBlank): target="_blank"#endif>
+                    #if(item.icon != nil):#svg(item.icon)#endif #(item.label)
+                </a>
+                #endfor
             </p>
         </section>
     </footer>
