--- a/Sources/App/Modules/Static/Templates/Admin/Pages/Edit.html
+++ b/Sources/App/Modules/Static/Templates/Admin/Pages/Edit.html
@@ -1,5 +1,5 @@
 #define(toolbarLeft):
-    #if(fields.id != nil):
+    #if(fields.modelId != nil):
     <a href="/admin/frontend/metadatas/#(fields.metadata.id)">#svg("feather")</a>
     <a href="#if(!fields.metadata.slug.isEmpty()):/#(fields.metadata.slug)/#else:/#endif" target="_blank">#svg("eye")</a>
     #endif
@@ -19,7 +19,7 @@
     "list": "pages",
     "id": formId,
     "token": formToken,
-    "modelId": fields.id,
+    "modelId": fields.modelId,
     "key": "page"
 ])
 #inline("Admin/Form")
