--- a/Sources/App/Modules/Site/Templates/Admin/Settings.html
+++ b/Sources/App/Modules/Site/Templates/Admin/Settings.html
@@ -74,7 +74,7 @@
                 #(field = ["id": "footer", "label": "Contents", "size": "small", "data": fields.footer])
                 #inline("Admin/Fields/Textarea")
                 
-                #(field = ["id": "copyright", "size": "small", "required": true, "data": fields.copy])
+                #(field = ["id": "copy", "label": "Copyright", "size": "small", "required": true, "data": fields.copy])
                 #inline("Admin/Fields/Textarea")
             
             </fieldset>
