post layout fix

--- a/Sources/App/Modules/Blog/Templates/Frontend/Author.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Author.html
@@ -18,7 +18,7 @@
     </header>
 
     <div class="g6 g:gap:l:hd">
-    #for((index, post) in posts):
+    #for(post in posts):
         #let(size = 2)
         #inline("Blog/Frontend/SinglePost")
     #endfor
