--- a/Sources/App/Modules/Admin/Templates/Table.html
+++ b/Sources/App/Modules/Admin/Templates/Table.html
@@ -34,7 +34,7 @@
     </table>
 </div>
 <div class="wrapper w:full m:l">
-    <div class="pagination">
+    <div id="pagination">
     #inline("Admin/Pagination")
     </div>
 </div>
