--- a/Sources/App/Modules/Blog/Templates/Frontend/Posts.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Posts.html
@@ -37,7 +37,7 @@
     </div>
     #endif
 
-    <div class="pager">
+    <div id="pagination">
     #inline("Frontend/Pagination")
     </div>
 </div>
