--- a/Public/css/frontend.light.css
+++ b/Public/css/frontend.light.css
@@ -98,51 +98,23 @@ form .required {
     color: #21a9ff;
 }
 form .error {
-    color: #ef695e;
-    
+    color: #ef695e;    
 }
-
-td.small img {
-    width: 64px;
-    height: 64px;
+#pagination span {
+    color: #ccc;
 }
-
-
-
-
-
-
-pre {
+#pagination span.info {
+    color: #666;
+}
+#pagination svg {
     background: #fff;
-    border: 1px solid #f0f0f0;
+    border: 1px solid #e9e9e9;
 }
-pre code {
-    color: #0B4F79;
+#pagination a:hover svg {
+    background: #f0f0f0;
+    border: 1px solid #e0e0e0;
 }
-pre code .keyword {
-    color: #9B2393;
-}
-pre code .type {
-    color: #3900A0;
-}
-pre code .call {
-    color: #326D74;
-}
-pre code .property {
-    color: #6C36A9;
-}
-pre code .number {
-    color: #1C00CF;
-}
-pre code .string {
-    color: #C41A16;
-}
-pre code .comment {
-    color: #5D6C79;
-}
-pre code .dotAccess {
-    color: #0F68A0;
-}
-pre code .preprocessing {
-    color: #643820;
-}
+
+
+
+
