--- a/Sources/App/Modules/Frontend/Templates/Admin/Metadatas/Edit.html
+++ b/Sources/App/Modules/Frontend/Templates/Admin/Metadatas/Edit.html
@@ -10,7 +10,7 @@
 <fieldset class="p m:bottom:l br:xs">
     <legend class="p:horizontal:s">Information</legend>
 
-    #(field = ["id": "image", "class": "large", "data": fields.image])
+    #(field = ["id": "image", "class": "large", "data": fields.image, "accept": "image/jpeg"])
     #inline("Admin/Fields/File")
     
     #(field = ["id": "title", "data": fields.title])
