--- a/Sources/App/Modules/Site/Templates/Admin/Settings.html
+++ b/Sources/App/Modules/Site/Templates/Admin/Settings.html
@@ -18,7 +18,7 @@
                 #(field = ["id": "formToken", "value": formToken])
                 #inline("Admin/Fields/Hidden")
 
-                #(field = ["id": "image", "label": "Logo", "class": "small", "data": fields.image])
+                #(field = ["id": "image", "label": "Logo", "class": "small", "data": fields.image, "accept": "image/png"])
                 #inline("Admin/Fields/File")
 
                 #(field = ["id": "title", "required": true, "data": fields.title])
