--- a/Sources/App/Modules/Blog/Templates/Admin/Authors/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Authors/Edit.html
@@ -12,7 +12,7 @@
 #define(fields):
     #var(field = nil)
 
-    #(field = ["id": "image", "class": "circular", "data": fields.image, "required": true])
+    #(field = ["id": "image", "class": "circular", "data": fields.image, "required": true, "accept": "image/jpeg"])
     #inline("Admin/Fields/File")
 
     #(field = ["id": "name", "required": true, "data": fields.name])
