--- a/Sources/App/Modules/Blog/Templates/Admin/Posts/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Posts/Edit.html
@@ -7,7 +7,7 @@
 #define(fields):
     #var(field = nil)
 
-    #(field = ["id": "image", "class": "large", "data": fields.image, "required": true])
+    #(field = ["id": "image", "class": "large", "data": fields.image, "required": true, "accept": "image/jpeg"])
     #inline("Admin/Fields/File")
 
     #(field = ["id": "title", "required": true, "data": fields.title])
