locale & timezone updates

--- a/Sources/App/Modules/Analytics/Templates/Admin/Overview.html
+++ b/Sources/App/Modules/Analytics/Templates/Admin/Overview.html
@@ -10,7 +10,7 @@
         <div class="g2 g:gap:l center">
             <div class="g:col2 bg2 p:l br:s border1">
                 <span>#svg("eye", class: "block w64")</span>
-                <h3>Total hits</h3>
+                <h3>Total page views</h3>
                 <p class="h1">#(totalPageViews)</p>
             </div>
 
