--- a/Sources/App/Modules/Site/Templates/Admin/Settings.html
+++ b/Sources/App/Modules/Site/Templates/Admin/Settings.html
@@ -32,7 +32,7 @@
             <fieldset class="p m:bottom:l br:xs">
                 <legend class="p:horizontal:s">Localization</legend>
                 
-                #(field = ["id": "locale", "label": "Language", "required": true, "data": fields.locale])
+                #(field = ["id": "locale", "label": "Locale", "required": true, "data": fields.locale])
                 #inline("Admin/Fields/Selection")
                 
                 #(field = ["id": "timezone", "required": true, "data": fields.timezone])
