new modular scopes support, inline svg entity moved to fc

--- a/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Authors.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Authors.html
@@ -1,6 +1,6 @@
 #let(head = [
-    "title": $vars["authors.page.title"],
-    "description": $vars["authors.page.description"],
+    "title": $system["authors.page.title"],
+    "description": $system["authors.page.description"],
     "css": metadata.css,
     "js": metadata.js
 ])
