--- a/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Categories.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Categories.html
@@ -1,6 +1,6 @@
 #let(head = [
-    "title": $vars["categories.page.title"],
-    "description": $vars["categories.page.description"],
+    "title": $system["categories.page.title"],
+    "description": $system["categories.page.description"],
     "css": metadata.css,
     "js": metadata.js
 ])
