--- a/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Post.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Post.html
@@ -32,16 +32,16 @@
 
 #inline("Sponsor/Box")
 
-#if($vars["share.isEnabled"] != nil && $vars["share.isEnabled"] == "true"):
+#if($system["share.isEnabled"] != nil && $system["share.isEnabled"] == "true"):
 <div class="wrapper w center">
     <section id="share" class="m:xl">
         <hr>
-        <p>#($vars["share.link.prefix"] ?? "") <a href="https://twitter.com/intent/tweet?via=#($vars["share.author"] ?? "")&hashtags=#($vars["share.hashtags"] ?? "")&url=#($app.baseUrl)#($req.url.path)" target="_blank">#($vars["share.link"] ?? "Share on Twitter")</a> #($vars["share.link.suffix"] ?? "")</p>
+        <p>#($system["share.link.prefix"] ?? "") <a href="https://twitter.com/intent/tweet?via=#($system["share.author"] ?? "")&hashtags=#($system["share.hashtags"] ?? "")&url=#($app.baseUrl)#($req.url.path)" target="_blank">#($system["share.link"] ?? "Share on Twitter")</a> #($system["share.link.suffix"] ?? "")</p>
     </section>
 </div>
 #endif
 
-#if($vars["post.author.isEnabled"] != nil && $vars["post.author.isEnabled"] == "true"):
+#if($system["post.author.isEnabled"] != nil && $system["post.author.isEnabled"] == "true"):
 <div class="wrapper w center">
     <section class="m:xl">
         <img class="w128 br:circular" src="#(post.author.imageKey.resolve())" alt="Picture of #(post.author.name)" title="#(post.author.name)">
@@ -55,7 +55,7 @@
 </div>
 #endif
 
-#($vars["post.footer"] ?? "")
+#($system["post.footer"] ?? "")
 
 #enddefine
 #inline("Frontend/Index")
