Using CKEditor instead instead of normal content editor. This work out of the box

--- a/Sources/App/Modules/Blog/Bundle/Templates/Admin/Posts/Edit.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Admin/Posts/Edit.html
@@ -20,7 +20,7 @@
     #if($system["site.tiny.apikey"]):
     #inline("Admin/Fields/Textarea-tinymce")
     #else:
-    #inline("Admin/Fields/Textarea")
+    #inline("Admin/Fields/Textarea-ckeditor")
     #endif
 
     #(field = ["id": "categoryId", "label": "Category", "data": fields.categoryId])
