--- a/Sources/App/Modules/Static/Bundle/Templates/Admin/Pages/Edit.html
+++ b/Sources/App/Modules/Static/Bundle/Templates/Admin/Pages/Edit.html
@@ -14,7 +14,7 @@
     #if($system["site.tiny.apikey"]):
     #inline("Admin/Fields/Textarea-tinymce")
     #else:
-    #inline("Admin/Fields/Textarea")
+    #inline("Admin/Fields/Textarea-ckeditor")
     #endif
 
 #enddefine
